refactor: modernize code to Java 11